--- a/app/src/main/res/layout/fragment_aboutme.xml
+++ b/app/src/main/res/layout/fragment_aboutme.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,13 +10,36 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/ig"
         tools:context=".AboutmeFragment">
 
         <!-- TODO: Update blank fragment layout -->
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_width="299dp"
+            android:layout_height="215dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="60dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="320dp"
+            android:layout_marginEnd="50dp"
+            android:text="@string/About"
+            android:textSize="17sp" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="224dp"
+            android:layout_margin="70dp"
+            android:layout_marginTop="50dp"
+            app:srcCompat="@drawable/h" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="396dp"
+            android:layout_height="348dp"
+            android:layout_margin="@dimen/material_emphasis_medium"
+            android:text="" />
 
     </FrameLayout>
 </layout>
